[package]
name = "oxnet"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "commonly used networking primitives with common traits implemented"
keywords = ["networking"]
categories = ["network-programming", "web-programming"]

[features]
default = ["serde", "schemars", "ipnetwork"]
ipnetwork = ["dep:ipnetwork"]
schemars = ["dep:schemars", "dep:serde_json"]
serde = ["dep:serde"]
std = []

[dependencies]
schemars = {version = "0.8.21", optional = true }
serde = { version = "1.0.206", optional = true }
serde_json = { version = "1.0.119", optional = true }
ipnetwork = { version = "0.20.0", optional = true }

[dev-dependencies]
expectorate = "1.1.0"
regress = "0.10.0"