[package]
name = "oxnet"
version = "0.2.0"
edition = "2021"
rust-version = "1.84.0"
license = "MIT OR Apache-2.0"
description = "commonly used networking primitives with common traits implemented"
readme = "README.md"
repository = "https://github.com/oxidecomputer/oxnet"
documentation = "https://docs.rs/oxnet"
keywords = ["networking"]
categories = ["network-programming", "web-programming"]

[features]
default = ["serde", "schemars", "ipnetwork"]
ipnetwork = ["dep:ipnetwork"]
macaddr = ["dep:macaddr"]
schemars = ["dep:schemars", "dep:serde_json"]
serde = ["dep:serde"]
std = []

[dependencies]
schemars = {version = "0.8.22", optional = true }
serde = { version = "1.0.219", optional = true }
serde_json = { version = "1.0.140", optional = true }
ipnetwork = { version = "0.21.1", optional = true }
macaddr = { version = "1.0", optional = true }

[dev-dependencies]
expectorate = "1.2.0"
regress = "0.10.3"
